--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,11 @@ header > * {
     border: none;
     padding: 0 10px;
 }
+
+.search-form-button {
+    /* all:unset; */
+    width: 80px;
+    border-radius: 0 2px 2px 0;
+    border:none;
+    outline:1px solid grey;
+}
