--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,19 @@
 
 main {
     outline: 1px solid red;
-    height: 100%; /* 100% of html & body which have been set to min-height 100%*/ 
+    height: 100vh; /* 100% of html & body which have been set to min-height 100%*/ 
 }
 
 /* home page */
 
 .home-page {
-    height: 100%; /*stretch & be as wide as parent which is 100vh*/
-    outline: 1px solid black
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: max-content auto;
+    row-gap:30px;
+    height: 100%; /*stretch & be as tall as parent which is 100vh*/
 }
+
 
 /*header component*/
 header {
@@ -17,7 +21,7 @@ header {
     height: 60px;
     justify-content: center;
     align-items: center;
-    outline: 1px solid red;
+    box-shadow: 0 0 3px 0 grey;
 }
 
 header > * {
@@ -79,4 +83,15 @@ header h1 {
     border-radius: 0;
     border:none;
     border-left: 1px solid grey;
+}
+
+/* home component: ProductDisplay */
+
+/*==========product-display */
+.product-display {
+    border:1px solid grey;
+    padding:10px;
+    width:80%;
+    margin: 0 auto;
+    border-radius: 2px;
 }
