--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 
 main {
-    outline: 1px solid red;
-    height: 100vh; /* 100% of html & body which have been set to min-height 100%*/ 
+    min-height: 100vh; /* 100% of html & body which have been set to min-height 100%*/ 
 }
 
 /* home page */
@@ -88,11 +87,16 @@ header h1 {
 /* home component: ProductDisplay */
 
 .product-display {
-    border:1px solid grey;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: 300px;
+    /* border:1px solid grey; */
     padding:10px;
     width:80%;
     margin: 0 auto;
     border-radius: 2px;
+    row-gap:20px;
+    column-gap:1px;
 }
 
 .no-products {
@@ -101,4 +105,21 @@ header h1 {
     padding:10px;
     border-radius:5px;
     margin: calc(100vh/2) auto;
+}
+
+.product-panel {
+    /* outline:1px solid red; */
+    padding:4px;
+    
+}
+
+.product-panel img {
+    width:100%;
+    height:200px;
+    object-fit: cover;
+}
+
+.product-name {
+    font-size:1.5em;
+    font: weight 100px;;
 }
