--- a/src/App.css
+++ b/src/App.css
@@ -89,14 +89,14 @@ header h1 {
 .product-display {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-auto-rows: 300px;
+    grid-auto-rows: 310px;
     /* border:1px solid grey; */
     padding:10px;
     width:80%;
     margin: 0 auto;
     border-radius: 2px;
     row-gap:20px;
-    column-gap:1px;
+    column-gap:5px;
 }
 
 .no-products {
@@ -109,8 +109,15 @@ header h1 {
 
 .product-panel {
     /* outline:1px solid red; */
-    padding:4px;
-    
+    padding:4px; 
+    box-shadow: none;
+    transition: all 0.2s;
+}
+
+.product-panel:hover {
+    box-shadow: 0 0 2px 1px grey;
+    transform: scale(1.01);
+    /* outline: 1px solid grey; */
 }
 
 .product-panel img {
@@ -122,4 +129,19 @@ header h1 {
 .product-name {
     font-size:1.5em;
     font: weight 100px;;
+}
+
+#add-cart {
+    border:none;
+    width: 100%;
+    background-color: green;
+    border-radius: none;
+    color:white;
+    font-weight: 500;
+    padding:5px 0;
+    margin-top:5px;
+}
+
+#add-cart:hover {
+    cursor: pointer;
 }
