--- a/src/App.css
+++ b/src/App.css
@@ -145,3 +145,80 @@ header h1 {
 #add-cart:hover {
     cursor: pointer;
 }
+
+
+/*add product page*/
+.add-product {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: 1px solid red;
+    min-height: 100vh;    
+}
+
+form {
+    display:flex;
+    align-items: center;
+    /* outline:1px solid grey; */
+    padding:10px;
+    width:70%;
+}
+
+form > * {
+    padding:10px;
+}
+
+.image-preview {
+    width:55%;
+    height: 500px;
+    border-radius: 2px;
+    background-color: rgba(0, 0,180, 0.2);
+
+}
+
+.form-fields {
+    width: 45%;
+    display:flex;
+    flex-direction: column;
+    height:600px;
+    border-radius:2px;
+    background-color: rgba(180,180,180, 0.2);
+}
+
+.form-fields > * {
+    margin-bottom: 30px;
+}
+
+.form-fields > input {
+    height:40px;
+    padding:10px;
+}
+
+.form-fields input[type=file] {
+    outline:1px solid grey;
+    background-color: #fff;
+}
+
+.form-fields select {
+    outline:1px solid grey;
+    width: 100%;
+    height:35px;
+    background-color: #fff;
+    border:none;
+    border-radius: none;
+    padding:0 15px;
+}
+
+.form-fields button {
+    width:100%;
+    height:40px;
+    color:#fff;
+    background-color: blue;
+    font-weight: bold;
+    border:none;
+    cursor: pointer;
+}
+
+
+
+
