--- a/src/App.css
+++ b/src/App.css
@@ -89,8 +89,7 @@ header h1 {
 .product-display {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-auto-rows: 340px;
-    /* border:1px solid grey; */
+    grid-auto-rows: 350px;
     padding:10px;
     width:80%;
     margin: 0 auto;
@@ -217,6 +216,22 @@ form > * {
     font-weight: bold;
     border:none;
     cursor: pointer;
+}
+
+
+/* delete & edit buttons on product display */
+.admin-controls {
+    display: flex;
+    justify-content: space-between;
+    padding:0 20px;
+    margin-top: 10px;
+}
+
+.admin-controls > * {
+    cursor: pointer;
+    /* border: 1px solid green; */
+    width: 80px;
+    height:25px;
 }
 
 
