--- a/src/App.css
+++ b/src/App.css
@@ -234,6 +234,41 @@ form > * {
     height:25px;
 }
 
+div.overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index:1;
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background-color: rgba(32, 30, 30, 0.1);
+}
+
+.edit-product {
+    display: flex;
+    flex-direction: column;
+    border-radius: 3px;
+    padding: 10px;
+    background-color: #fff;
+    width: 30%;
+}
+
+.edit-product img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.edit-product > .modal-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+    margin:20px 0;
+}
+
 
 
 
