--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,6 @@ header h1 {
     display: flex;
     flex-wrap: nowrap;
     width: 400px;
-    /* outline: 1px solid green; */
 }
 
 .search-form input[type=text] {
@@ -61,11 +60,11 @@ header h1 {
 }
 
 .search-form-button {
-    /* all:unset; */
     width: 80px;
     border-radius: 0 2px 2px 0;
     border:none;
     outline:1px solid grey;
+    padding: 6.5px 0;
 }
 
 /* Login trigger */
@@ -147,57 +146,66 @@ header h1 {
 
 /*add product page*/
 .add-product {
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background-color: rgba(22, 20, 20, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
     outline: 1px solid red;
-    min-height: 100vh;    
+    min-height: 100vh;  
 }
 
-form {
+.add-product form {
     display:flex;
+    flex-direction: column;
     align-items: center;
-    /* outline:1px solid grey; */
     padding:10px;
-    width:70%;
+    min-width:50%;
+    background-color: #fff;
+    border-radius:3px;
 }
 
-form > * {
-    padding:10px;
+.add-product form > * {
+    margin-bottom:20px;
 }
 
-.image-preview {
+
+/* .image-preview {
     width:55%;
     height: 500px;
     border-radius: 2px;
     background-color: rgba(0, 0,180, 0.2);
 
-}
+} */
 
-.form-fields {
+/* .form-fields {
     width: 45%;
     display:flex;
     flex-direction: column;
     height:600px;
     border-radius:2px;
     background-color: rgba(180,180,180, 0.2);
-}
+} */
 
-.form-fields > * {
+/* .form-fields > * {
     margin-bottom: 30px;
-}
+} */
 
-.form-fields > input {
+/* .form-fields > input {
     height:40px;
     padding:10px;
-}
+} */
 
-.form-fields input[type=file] {
+/* .form-fields input[type=file] {
     outline:1px solid grey;
     background-color: #fff;
-}
+} */
 
-.form-fields select {
+/* .form-fields select {
     outline:1px solid grey;
     width: 100%;
     height:35px;
@@ -205,9 +213,9 @@ form > * {
     border:none;
     border-radius: none;
     padding:0 15px;
-}
+} */
 
-.form-fields button {
+/* .form-fields button {
     width:100%;
     height:40px;
     color:#fff;
@@ -215,7 +223,7 @@ form > * {
     font-weight: bold;
     border:none;
     cursor: pointer;
-}
+} */
 
 
 /* delete & edit buttons on product display */
