ADD;restructure project

--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,14 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    font-size: 12px;
     font-family: 'Roboto', sans-serif;
 }
 
-html, body {
-    font-size: 12px;
+html, body, #root {
     min-height:100vh;
 }
 
