--- a/src/App.css
+++ b/src/App.css
@@ -1,301 +1,4 @@
-
 main {
-    min-height: 100vh; /* 100% of html & body which have been set to min-height 100%*/ 
+    min-height: 100vh;
+    background-color: aquamarine;
 }
-
-/* home page */
-
-.home-page {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: max-content auto;
-    row-gap:30px;
-    height: 100%; /*stretch & be as tall as parent which is 100vh*/
-}
-
-
-/*header component*/
-header {
-    display: flex;
-    height: 60px;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 0 3px 0 grey;
-    position:relative;
-}
-
-header > * {
-    margin: 0 10px;
-}
-
-/* title styles */
-header h1 {
-    color: rgb(43, 39, 39)
-}
-
-/*main nav*/
-.main-nav:hover, .cart:hover {
-    outline: 1px solid grey;
-    border-radius: 2px;
-}
-
-.login-trigger:hover, .main-nav:hover, .search-form-button:hover, .cart:hover {
-    cursor: pointer;
-}
-
-/* search form*/
-.search-form {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 400px;
-}
-
-.search-form input[type=text] {
-    flex-grow: 1; /*It dictates what amount of the available space inside the flex container the item should take up.*/
-    height:30px;
-    border-radius: 2px 0 0 2px;
-    outline: 1px solid grey;
-    border: none;
-    padding: 0 10px;
-}
-
-.search-form-button {
-    width: 80px;
-    border-radius: 0 2px 2px 0;
-    border:none;
-    outline:1px solid grey;
-    padding: 6.5px 0;
-}
-
-/* Login trigger */
-.login-trigger {
-    display: flex;
-    flex-wrap: nowrap;
-    width:100px;
-    column-gap: 5px;
-    outline: 1px solid gray;
-    border-radius: 2px;
-}
-
-.login-trigger button {
-    flex-grow: 1;
-    border-radius: 0;
-    border:none;
-    border-left: 1px solid grey;
-}
-
-/* home component: ProductDisplay */
-
-.product-display {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-auto-rows: 350px;
-    padding:10px;
-    width:80%;
-    margin: 0 auto;
-    border-radius: 2px;
-    row-gap:20px;
-    column-gap:5px;
-}
-
-.no-products {
-    outline:1px solid grey;
-    width: fit-content;
-    padding:10px;
-    border-radius:5px;
-    margin: calc(100vh/2) auto;
-}
-
-.product-panel {
-    padding:4px; 
-    box-shadow: none;
-    transition: all 0.2s;
-}
-
-/* .product-panel:hover {
-    box-shadow: 0 0 2px 1px grey;
-    transform: scale(1.01);
-} */
-
-.product-panel img {
-    width:100%;
-    height:200px;
-    object-fit: cover;
-}
-
-.product-name {
-    font-size:1.5em;
-    font: weight 100px;;
-}
-
-#add-cart {
-    border:none;
-    width: 100%;
-    background-color: green;
-    border-radius: none;
-    color:white;
-    font-weight: 500;
-    padding:5px 0;
-    margin-top:5px;
-}
-
-#add-cart:hover {
-    cursor: pointer;
-}
-
-
-/*****************add product page****************/
-.add-product {
-    position:absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    background-color: rgba(22, 20, 20, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    outline: 1px solid red;
-    min-height: 100vh;  
-}
-
-.add-product input[type=file], .add-product select {
-    /* outline:1px solid red; */
-    width: 60%;
-    border:none;
-}
-
-.add-product select {
-    height: 40px;
-    padding:10px;
-}
-
-.add-product form {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    padding:10px 20px;
-    min-width:fit-content;
-    background-color: #fff;
-    border-radius:3px;
-}
-
-.add-product form > * {
-    margin-bottom:20px;
-    width:100%;
-}
-
-.add-product button[type=submit]{
-    height:40px;
-}
-
-form .header {
-    display:flex;
-    justify-content: space-between;
-    padding: 10px 5px 15px 5px;;
-    border-bottom:1px solid grey;
-    /* outline:1px solid green; */
-}
-
-form label {
-    /* outline:1px solid red; */
-    display: flex;
-    justify-content: space-between;
-}
-
-.add-product form input {
-    border:none;
-    border-bottom:1px solid grey;
-    padding:5px;
-}
-.add-product form input:focus {
-    outline: none;
-}
-
-
-
-
-
-
-/* delete & edit buttons on product display */
-.admin-controls {
-    display: flex;
-    justify-content: space-between;
-    padding:0 20px;
-    margin-top: 10px;
-}
-
-.admin-controls > * {
-    cursor: pointer;
-    width: 80px;
-    height:25px;
-}
-
-div.overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index:1;
-    position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    background-color: rgba(32, 30, 30, 0.979);
-}
-
-.edit-product {
-    display: flex;
-    flex-direction: column;
-    border-radius: 3px;
-    padding: 10px;
-    background-color: #fff;
-    width: 30%;
-}
-
-.edit-product img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-}
-
-.edit-product > .modal-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 10px;
-    margin:20px 0;
-}
-
-/*Nav menu style*/
-
-ul.nav-menu {
-    position: absolute;
-    min-width:180px;
-    top: 65px;
-    left:140px;
-    padding: 10px;
-    border-radius: 0 0 5px 5px;
-    background-color: #fff;
-    box-shadow: 0 0 1px 2px rgba(180,180,180, 0.2)
-}
-
-.menu-item {
-    list-style: none;
-    padding:8px 10px;
-    cursor: pointer;
-}
-
-.menu-item:not(:last-child) {
-    border-bottom:1px solid grey;
-}
-
-.menu-item:hover {
-    background-color: rgba(180,180,180, 0.2);
-}
-
-.menu-item:active {
-    background-color: rgba(180,180,180, 0.4);
-}
-
-
-
