--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,12 @@ main {
 
 header {
     height:70px;
-    border:1px solid red;
     justify-content: center;
 }
 
 header > div {
     width:80%;
-    border:1px solid red;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -19,12 +18,6 @@ header .logo {
     text-transform: uppercase;
     font-weight: 500;
     font-size: 1.5em;
-    padding: 0 10px;
-}
-
-header form {
-    margin-right: 10px;
-    
 }
 
 header form input {
@@ -54,11 +47,11 @@ header form button {
     margin-right:10px;
 }
 
-.dropdown > div {
+.dropdown .account{
     padding: 0 10px;
     align-items: center;
     border-radius:5px;
-    background-color: grey;
+    background-color: rgba(120, 120, 120, 0.4);
     height:40px;
 
 }
@@ -76,8 +69,33 @@ header form button {
     overflow: auto;
 }
 
+.dropdown-options li {
+   list-style: none;
+   margin:  8px 0;
+}
+
+.dropdown-options li a {
+    text-decoration: none;
+}
+
+.dropdown:hover .account {
+    border-radius: 5px 5px 5px 0;
+}
+
 .dropdown:hover .dropdown-options {
-    display: block;
+    display: flex;
+    flex-direction:column;
+    padding: 10px;
+    background-color: rgba(120, 120, 120, 0.4);
+    border-radius: 0 0 5px 5px;
+  }
+
+.login-link {
+    background-color: aqua;
+    width:100px;
+    padding: 10px;
+    border-radius:2px;
+    text-align: center;
   }
   
 
