--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 main {
     min-height: 100vh;
-    background-color: aquamarine;
 }
 
 header {
     height:70px;
     justify-content: center;
+    box-shadow: 0 1px 2px 1px rgba(120, 120, 120, 0.4);
 }
 
 header > div {
@@ -98,9 +98,29 @@ header form button {
     text-align: center;
   }
   
-
+/* layout component for the page body */
 .layout {
-    
+    min-height:calc(100vh - 70px);    
+}
+
+/* aside menu  */
+aside.admin-nav {
+    width: 20%;
+    background-color: #fff;
+    border-top: 1px solid rgba(120, 120, 120, 0.4);
+    border-right: 1px solid rgba(120, 120, 120, 0.4);
+    padding: 20px 10px;
+}
+
+.admin-menu-items li {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    height:50px;
+    width:100%;
+    border-bottom:1px solid grey;
+
 }
 
 /* utility classes */
