--- a/src/App.css
+++ b/src/App.css
@@ -134,9 +134,6 @@ aside.admin-nav {
     background-color: aliceblue;
 }
 
-
-
-
 /* utility classes */
 .flex {
     display: flex;
@@ -145,4 +142,35 @@ aside.admin-nav {
 .flex-col {
     display: flex;
     flex-direction: column;
+}
+
+/* product ;ist styles*/
+section.product-list {
+    display: grid;
+    gap:5px;
+    padding: 5px;
+    width: 100%;
+    grid-template-columns: repeat( auto-fill, minmax(200px, 1fr) );
+    grid-auto-rows: 300px;
+}
+
+article.product-panel {
+    background-color: rgba(120, 120, 120, 0.1);
+    padding: 5px;
+    width:100%;
+    height:100%;
+}
+
+div.item-image {
+    width:100%;
+    height:200px;
+    overflow: hidden;
+    border-radius: 5px;
+
+}
+
+.item-image img {
+    width:100%;
+    height:100%;
+    object-fit: cover;
 }
