--- a/src/App.css
+++ b/src/App.css
@@ -147,11 +147,11 @@ aside.admin-nav {
 /* product ;ist styles*/
 section.product-list {
     display: grid;
-    gap:5px;
-    padding: 5px;
+    gap:15px;
+    padding: 10px;
     width: 100%;
     grid-template-columns: repeat( auto-fill, minmax(200px, 1fr) );
-    grid-auto-rows: 300px;
+    grid-auto-rows: 340px;
 }
 
 article.product-panel {
@@ -159,6 +159,30 @@ article.product-panel {
     padding: 5px;
     width:100%;
     height:100%;
+    transition: transform 0.2s ease-in;
+}
+
+article.product-panel:hover {
+    transform: scale(1.03);
+    box-shadow: 0 0 1px 1px rgba(120, 120, 120, .5);
+    border-radius:2px;
+
+}
+
+.add-to-cart {
+    display:none;
+    width:100%;
+    height:40px;
+    border:1px solid rgba(74, 238, 9, 0.89);
+    background-color: rgba(74, 238, 9, 0.89);
+    border-radius:0;
+    margin: 10px 0;
+    color:#fff;
+    font-weight: bold;
+}
+
+article.product-panel:hover .add-to-cart {
+    display: block;
 }
 
 div.item-image {
@@ -166,6 +190,7 @@ div.item-image {
     height:200px;
     overflow: hidden;
     border-radius: 5px;
+    margin-bottom: 8px;
 
 }
 
@@ -174,3 +199,11 @@ div.item-image {
     height:100%;
     object-fit: cover;
 }
+
+.item-desc {
+    margin-bottom: 2px;
+    text-transform: capitalize;
+}
+
+
+
