--- a/src/App.css
+++ b/src/App.css
@@ -299,13 +299,13 @@ section.product-management {
 }
 
 article.management-panel {
-  width:350px;
-  height: 700px;
+  width:300px;
+  height: 600px;
   outline:1px solid red;
 }
 
 div.management-image {
-    height:400px;
+    height:300px;
     margin-bottom: 20px;
     
 }
@@ -334,4 +334,21 @@ div.management-image {
 
 .management-data input:focus {
     outline:none;
+}
+
+/* admin control buttons */
+
+.management-controls {
+    margin-top: 20px;
+    padding:20px
+}
+
+.management-controls button {
+    width: 30%;
+    height:40px;
+    border:1px solid rgba(120, 120, 120, .5);
+}
+
+.management-controls button:nth-child(even) {
+    margin: 0 10px;
 }
