ADD: Product display panem & refactor Products.tsx

--- a/src/App.css
+++ b/src/App.css
@@ -407,16 +407,13 @@ div.cart-image {
 }
 
 /* qunatity buttons in the cart */
-.quantity-btn {
-    border-radius: 2px;
-}
 
-.quantity-btn:hover {
+.quantity-btn:hover, .delete-item:hover{
+    border-radius: 2px;
     cursor: pointer;
     outline: 1px solid grey;
 } 
 
-/* article.item-list {
-    border:2px solid black;
-    margin: 20px 10px;
-} */
+.delete-item {
+    padding: 10px;
+};
